test/instance-checks-1.err.expect
test/instance-checks-1.ktn:1:1: error: cannot solve scalar type constraint int = t1 (from example)
test/instance-checks-1.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-1.ktn:1:24: note: int is from here
