test/instance-checks-1.ktn
define example @a (-> a): 10
